# Lab_Compression

./: .gitignore  CMakeLists.txt  README.md  build.bat
compression/: CMakeLists.txt
compression/include/: compressor.hpp  queryengine.hpp  schemaparser.hpp
compression/src/: compressor.cpp  main.cpp  queryengine.cpp  schemaparser.cpp
include/: compressor.hpp  queryengine.hpp  schemaparser.hpp
src/: compressor.cpp  main.cpp  queryengine.cpp  schemaparser.cpp
